--- a/.github/workflows/rsync_s3.yml
+++ b/.github/workflows/rsync_s3.yml
@@ -16,6 +16,11 @@ jobs:
     # https://github.com/marketplace/actions/s3-sync 
     steps:
       - uses: actions/checkout@master
+      - uses: vimtor/action-zip@v1
+        with:
+          files: ./
+          dest: ./s3_upload/app.zip
+
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete --exclude '.git/*' --exclude '.github/*'
@@ -25,4 +30,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
-          SOURCE_DIR: './'
+          SOURCE_DIR: './s3_upload'
